# dagster-poc

./: .flake8  .gitignore  Dockerfile  README copy.md  README.md  build-and-deploy.sh  requirements.txt
bronze_silver_gold_repo/: Dockerfile  README.md  pyproject.toml  requirements.txt  workspace.yaml
bronze_silver_gold_repo/.tmp_dagster_home_krnzu5x2/history/: runs.db
bronze_silver_gold_repo/.tmp_dagster_home_krnzu5x2/schedules/: schedules.db
bronze_silver_gold_repo/.tmp_dagster_home_krnzu5x2/storage/: customer_order_summary  customers_bronze  customers_silver  orders_bronze  orders_silver
bronze_silver_gold_repo/dagster_bsg/: repo.py
bronze_silver_gold_repo/dagster_bsg/assets/: bronze_assets.py  gold_assets.py  silver_assets.py
bronze_silver_gold_repo/dagster_bsg/jobs/: bronze_job.py  deltalake.py  gold_job.py  silver_job.py
bronze_silver_gold_repo/dagster_bsg/ops/: ops.py  transformations.py
bronze_silver_gold_repo/dagster_bsg/resources/: duckdb_resource.py
bronze_silver_gold_repo/dagster_bsg/schedules/: daily_schedule.py
bronze_silver_gold_repo/dagster_bsg/sensors/: bronze_sensor.py
mlops_repo/: Dockerfile  README.md  pyproject.toml  requirements.txt  workspace.yaml
mlops_repo/data/evaluation/: metrics.txt
mlops_repo/data/models/: model.pkl
mlops_repo/data/processed/: scaler.pkl
mlops_repo/mlops_repo/: repo.py
mlops_repo/mlops_repo/assets/: data_preprocessing.py  model_training.py
mlops_repo/mlops_repo/jobs/: mlops_job.py
mlops_repo/mlops_repo/schedules/: retrain_schedule.py
mlops_repo/model_a/assets/: data_ingestion.py  (+2 more)
(+73 files in other folders)
